# hospital-next-js-django

./: .dockerignore  .gitignore  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  publish.sh  requirements.txt
backend/: .dockerignore  .env  .env.dev  .env.kafka  .flake8  .gitignore  Dockerfile  crud  gunicorn.conf.py  manage.py  pyproject.toml
backend/api/: admin.py  apps.py  authentication.py  caching.py  defines.py  managers.py  middleware.py  mixins.py  models.py  paginations.py  permissions.py  serializers.py  signals.py  tasks.py  throttling.py  urls.py  utils.py  views.py
backend/api/migrations/: 0001_initial.py  0002_session_alter_user_managers_remove_user_type_and_more.py  0003_alter_patientcart_managers_alter_service_managers_and_more.py
backend/api/models/: agreement.py  employee.py  patient.py  patientcart.py  position.py  service.py  user.py
backend/api/serializers/: agreement.py  employee.py  patient.py  patientcart.py  position.py  service.py
backend/backend/: settings.py  urls.py
backend/business/: apps.py  defines.py  exceptions.py  filters.py  mixins.py  models.py  serializers.py  tasks.py  urls.py  views.py  webhook.py  webhooks.py
backend/business/migrations/: 0001_initial.py  0002_initial.py
backend/business/services/: invoices.py  payment.py  receipt.py  transaction.py  wallet.py
backend/config/: celery.py  schema.py  settings.py  urls.py
backend/core/: admin.py  authentication.py  caching.py  decorators.py  defines.py  exceptions.py  filters.py  managers.py  middleware.py  mixins.py  models.py  paginations.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/core/management/commands/: initadmin.py
backend/core/migrations/: 0001_initial.py
backend/deploy/: entrypoint.sh  gunicorn.conf.py  pre-install.sh
backend/docker/: entrypoint.sh  gunicorn.conf.py  pre-install.sh  supervisord.conf
backend/docs/: employee.api.md  patient.api.md  shared.api.md
backend/employee/: admin.py  apps.py  filters.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/employee/migrations/: 0001_initial.py
backend/fixtures/: models.json
backend/graphql/: apps.py  mutations.py  queries.py  schema.py  types.py
backend/hospital/: asgi.py  settings.py  wsgi.py
backend/patient/: __init__.py  admin.py  apps.py  defines.py  filters.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/patient/migrations/: 0001_initial.py
backend/schemas/: apps.py  inputs.py  mutations.py  queries.py  schema.py
deploy/: nginx.conf  prometheus.yml
frontend/: .dockerignore  .env.development  .eslintrc.json  .prettierignore  .prettierrc  .prettierrc.json  index.html  middleware.ts  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  server.js  tsconfig.json  vite.config.js  webpack.config.js
frontend/public/: index.html
frontend/src/: AllowRoute.jsx  App.js  App.jsx  ProtectedRoute.jsx  declaration.d.ts  index.js  index.jsx  routes.jsx  (+3 more)
(+237 files in other folders)
